--- a/pages/movies.htm
+++ b/pages/movies.htm
@@ -101,27 +101,29 @@ Design by: RTBWizards.com
         <img src="modhomesrealtylogo2017.jpg" width="450" height="235" class="auto-style8" />
     </a>
     <h3>The 2020-2021 NCModernist/ModHomes Architecture Movie Series</h3>
-	<a class="hover-link" href="https://www.modhomesrealty.com">Sarah Sonke</a>
-	<p>
-        Also sponsored by 
-        <a class="hover-link" href="https://www.hillcountrywoodworks.com/">Hill Country Woodworks</a> 
-        and the NCSU Libraries
-    </p>
+
+    <div class="border-top">
+        <p>Sponsored by ModHomes Realtor 
+            <a href="https://www.modhomesrealty.com" class="hover-link">Sarah Sonke</a> 
+            plus<br>NCSU Libraries and the Chelsea Theatre 
+        </p>
+
+        <img height="148" src="ncsu.png" width="164">
+        <img src="chelsea-logo.jpg" height="150" width="333">
+        <p>
+            The Chelsea is a beloved Chapel Hill art 
+            house theatre that in normal times features fresh organic popcorn, local craft beers, 
+            and curated wine and soft drink sections. This year we're ONLINE and we're GLOBAL with the first of six design films, one a month through March 2021. Proceeds benefit the nonprofit documentation, preservation, and promotion work of NCModernist.</p>
+        <p>Tickets are $12/household.&nbsp; 
+            Special: Free admission for 
+            <a href="https://www.usmodernist.org/modsquad.htm" class="hover-link">Mod Squad members</a> with pre-registration, up to capacity: 
+            send an email to 
+            <a href="mailto:rebekah@ncmodernist.org" class="hover-link">rebekah@ncmodernist.org</a> by noon on 
+            Friday before the film. Free seats do run out, so reserve yours early.</p>
+        <p>How to get tickets:&nbsp; TBA. </p>
+    </div>
 
     <section class="hover-class architect-movies">
-        <div class="border-top">
-            <img src="chelsea-logo.jpg" height="150" width="333">
-            <address>1129 Weaver Dairy Road <br> Chapel Hill</address>
-            <p>The Chelsea is a beloved Chapel Hill art house theatre featuring fresh popcorn, craft beers, wine, and soft drinks!  Doors open at 7pm, films start at 730pm. Prizes at each film! Tickets at the door are $11 general public, $9 Chelsea and Mod Squad members. Or you can get advance tickets
-                <a href="https://thechelseatheater.org/films/ncmodernist-series/">here</a>.
-            </p>
-            <p>
-                Special: Free admission for 
-                <a href="https://www.usmodernist.org/modsquad.htm">Mod Squad members</a> with pre-registration, up to capacity: send an email to 
-                <a href="mailto:Rebekah@ncmodernist.org">Rebekah@ncmodernist.org</a> 
-                by noon on Friday before the film. Free seats do run out, so reserve yours early.</p>
-        </div>
-
         <div class="border-top">
             <iframe title="vimeo-player" src="https://player.vimeo.com/video/397465298" width="640" height="360" frameborder="0" allowfullscreen></iframe>
             <h5 class="center">The New Bauhaus</h5>
@@ -135,8 +137,9 @@ Design by: RTBWizards.com
             from its origins at the German Bauhaus into an extraordinary flowering of 
             interdisciplinary design pedagogy premised on the notion that “the whole 
             field of contemporary architecture and design must be based upon an 
-            indivisible unification of formerly separated and independent fields.” 
-            Featuring Producer Alyssa Nahmias by phone for Q&amp;A after the movie.</p>
+            indivisible unification of formerly separated and independent fields.”</p>
+            <p>How to View: Starting at 6pm on October 5th and ending at 9pm on October 7th, go to the Chelsea Theatre's website. Pick The New Bauhaus and you'll be taken to the film streaming platform, where you'll register (free).  At that point, purchase your ticket, and you have 48 hours from that point to stream the film. You have the ability to stop and resume viewing anytime during those 48 hours.</p>
+            <p>On Thursday, October 8, all ticket purchasers will be invited to a special Zoom Q&A call on Friday, October 9, at 830pm ET with producer Alyssa Nahmias.</p>
         </div>
 
         <div class="border-top">
@@ -145,25 +148,29 @@ Design by: RTBWizards.com
             <i>Monday, November 2</i>
             <p>In a follow up to last year's Frey I, Frey II starts in 1939. Swiss-born Corbusian architectural envoy 
             <a href="https://www.usmodernist.org/frey.htm">Albert Frey</a>
-            embarks on a decades-long journey of discovery. His world travels and love of nature 
-            would lead him to carve out a new style of modernism, leaving its indelible 
-            mark on the desert community of Palm Springs, California. With 
-            never-before-seen archival films, photographs and interviews, this 
-            film continues to reveal the mystique of an influential architectural master. Plus 
-            it has spectacular footage of Frey's work in Palm Springs. Featuring producer Jake Gorst by 
-            phone for Q&amp;A after the movie.</p>
+            embarks on a decades-long journey of discovery. His world travels and love of nature would lead him to carve out a new style of modernism, leaving its indelible mark on the desert community of Palm Springs, California. With never-before-seen archival films, photographs and interviews, this film continues to reveal the mystique of an influential architectural master. Plus it has spectacular footage of Frey's work in Palm Springs.</p>
+            <p>Featuring producer Jake Gorst and co-star George Smart by Zoom for Q&amp;A after the movie at 8pm ET.</p>
         </div>
     
         <div class="border-top">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/tZNkqXAt5fE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <h5 class="center">Neutra: Survival Through Design</h5>
-            <i>Monday, December 7</i>
-            <p>A comprehensive documentary into the 125 year life, work, and times of 
-            Austrian/American Architect
-            <a href="https://www.usmodernist.org/neutra.htm">Richard Neutra</a> 
-            – the legacy which continued 
-            through the preservation work of sons Raymond and Dion Neutra.
-            Featuring Q&amp;A with producer PJ Letofsky by phone after the movie.</p>
+            <iframe src="https://player.vimeo.com/video/9584807?title=0&byline=0&portrait=0" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+            <h5 class="center">Visual Acoustics</h5>
+            <i>Monday-Tuesday, December 7-9</i>
+            <p>Narrated by Dustin Hoffman, this film celebrates the life and career of 
+            Julius Shulman, the world’s greatest architectural photographer, whose 
+            images brought modern architecture to the American mainstream. Shulman, who 
+            passed away in 2009, captured the work of nearly every modern and 
+            progressive architect since the 1930s including
+            <a href="http://www.usmodernist.org/wright.htm">Frank Lloyd Wright,</a>
+            <a href="http://www.usmodernist.org/neutra.htm">Richard Neutra</a>,
+            <a href="http://www.usmodernist.org/lautner.htm">John Lautner</a> and
+            <a href="http://www.usmodernist.org/gehry.htm">Frank Gehry</a>. His images 
+            epitomized the singular beauty of Southern California’s modernist movement 
+            and brought its iconic structures to the attention of the general public. 
+            This unique film is both a testament to the evolution of modern architecture 
+            and a joyful portrait of the magnetic, whip-smart gentleman who chronicled 
+            it with his unforgettable images.</p>
+            <p>Featuring producer Eric Bricker by Zoom for Q&amp;A at 8pm ET on December 7 after the movie.</p>
         </div>
 
         <div class="border-top">
@@ -180,8 +187,8 @@ Design by: RTBWizards.com
             Ledbetter House (1947), Bachman House (1948), and Bavinger House (1950). 
             Goff’s willingness to explore unprecedented forms, his passion for new 
             materials, shapes and solutions, meant that his work wasn't often received 
-            in a favourable light from more conservative environments. Featuring Producer Britni Harris 
-            for Q&amp;A by phone after the movie.</p>
+            in a favourable light from more conservative environments.</p>
+            <p>Featuring Producer Britni Harris for Q&amp;A by phone after the movie.</p>
         </div>
 
         <div class="border-top">
@@ -190,8 +197,8 @@ Design by: RTBWizards.com
             <i>Monday, February 1</i>
             <p>This documentary tells the story of Sydney Opera House architect Jørn Utzon's unique gift, brought to the world with the unending support of Lis, 
             the love of his life. His story is told by the people who were closest to him: his children, close colleagues and friends, who share their open, 
-            honest anecdotes and experiences of him as an architect and a man. The film is a portrait of a devoted humanitarian and a sensitive and loving soul. Featuring 
-            producer Lene Borch Hansen for Q&amp;A by phone after the movie.</p> 
+            honest anecdotes and experiences of him as an architect and a man. The film is a portrait of a devoted humanitarian and a sensitive and loving soul.</p>
+            <p>Featuring producer Lene Borch Hansen for Q&amp;A by phone after the movie.</p> 
             <a href="https://www.amazon.com/gp/video/detail/B07ZY7MCVT/ref=atv_dp_watch_trailer?autoplay=trailer">Watch Trailer</a>
         </div>
     
@@ -212,8 +219,8 @@ Design by: RTBWizards.com
             film, he gave the developer many different ideas for the home designs of 
             what would become the "Leisurama" community, but they went with essentially 
             the one most similar to existing suburban "ranchburgers," as Alastair Gordon 
-            puts it. Featuring Producer Jake Gorst 
-            by phone for Q&amp;A after the movie.</p>
+            puts it.</p>
+            <p>Featuring Producer Jake Gorst by phone for Q&amp;A after the movie.</p>
         </div>
 
         <div class="border-top">
@@ -231,6 +238,20 @@ Design by: RTBWizards.com
             circle, and NASA’s futuristic Mars habitat in Hawaii, USA. It’s a poetic 
             expedition around four continents. An existential film about how we 
             construct and articulate stories about our homes.</p>
+        </div>
+
+
+        <div class="border-top">
+            <h3>Coming in 2021</h3>
+
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/tZNkqXAt5fE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <h5 class="center">Neutra: Survival Through Design</h5>
+            <p>A comprehensive documentary into the 125 year life, work, and times of 
+            Austrian/American Architect
+            <a href="https://www.usmodernist.org/neutra.htm">Richard Neutra</a> 
+            – the legacy which continued 
+            through the preservation work of sons Raymond and Dion Neutra.</p>
+            <p>Featuring Q&amp;A with producer PJ Letofsky by phone after the movie.</p>
         </div>
 
         <div class="border-top">
