--- a/pages/t4a.htm
+++ b/pages/t4a.htm
@@ -98,8 +98,8 @@ Design by: RTBWizards.com
    <div class="container pageTitle">
       <div class="inside">
          <!-- #BeginEditable "pagetitle" -->
-          <h1>Thirst4Architecture</h1>
-          <img height="200" src="t4alogo.png" width="200">
+        <h1>Thirst4Architecture</h1>
+        <img height="200" src="t4alogo.png" width="200">
         <iframe src="https://www.youtube.com/embed/a8rPZ25hXQo" frameborder="0" allowfullscreen id="I1" name="I1" style="width: 200px; height: 200px"></iframe>
 
         <p class="left">
@@ -126,15 +126,9 @@ Design by: RTBWizards.com
         </a>
         
         <section class="t4a-events">
-            <div class="border-top">
-                <img src="beyondblue-logo.jpg">
-                <h5 class="center">Thursday, November 19: 6-8pm</h5> 
-                <address>Beyond Blue Interiors <br> North Hills</address>
-            </div>
-
             <div class="border-top">    
                 <img height="225" src="re.logo.png" width="225">
-                <h5 class="center">Thursday, December TBA</h5> 
+                <h5 class="center">2021 TBA</h5> 
                <address>111 Old Williamson Road 101 <br> Raleigh, NC</address>
                <p>Join Will Alphin and the crew of re.design.build at their new offices!</p>
             </div>
@@ -155,6 +149,12 @@ Design by: RTBWizards.com
                 <p>hosted by the Research Triangle Foundation.</p>
             </div>
 
+            <div class="border-top">
+                <img src="beyondblue-logo.jpg">
+                <h5 class="center">April 2021 TBA, 6-8pm</h5> 
+                <address>Beyond Blue Interiors <br> North Hills</address>
+            </div>
+
             <div class="border-top">    
                 <a href="https://habaneroarchitecture.com/">
                     <img src="img14.jpg">
@@ -165,6 +165,7 @@ Design by: RTBWizards.com
                 and Habenero Design.
                 </p>
             </div>
+
             <div class="border-top">  
                 <img height="333" src="notch-logo.png" width="269">
                 <img height="333" src="notch-t4a-1.jpg" width="592">
@@ -179,6 +180,7 @@ Design by: RTBWizards.com
                     <a class="hover-link" href="https://engage.squarespace-mail.com/r?m=5e6649c23cf43d17b94ce19f&amp;u=https%3A%2F%2Fwww.marvin.com%2Fen&amp;w=5c43cbdbcef372db48ec65b0&amp;l=en-US&amp;s=OmaPbqldw2Vj17n9BihxVh2qRYw%3D">Marvin Windows</a>.
                 </p>
             </div>
+            
             <div class="border-top">  
                 <img src="raleigharch-logo.png" alt="NCModernist" width="212" height="270" />
                 <img height="276" src="kerins-newoffice.png" width="654">
